# Muse_CSV_Cleaner

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-ci.yml
docs/: ARCHITECTURE.md  GITHUB_RELEASE_v1.0.0.md  RELEASE_NOTES_v1.0.0.md  USAGE.md
examples/: README.md
src/muse_csv_cleaner/: cli.py
tests/: test_normalization.py
