[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muse-csv-cleaner"
version = "1.0.0"
description = "Clean and normalize MUSE cytometer CSV/Excel files for downstream analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Project Maintainer"}
]
keywords = ["muse", "csv", "cleaning", "cytometry", "data-preprocessing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "pandas>=1.5.0",
  "chardet>=5.0.0",
  "openpyxl>=3.1.0"
]

[project.scripts]
muse-csv-cleaner = "muse_csv_cleaner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
